PitonParser.java
// Generated from Piton.g4 by ANTLR 4.13.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PitonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, ATR=6, OP_ART=7, PARA=8, ATE=9, 
		ENQ=10, OP_REL=11, OP_LOG=12, VAZ=13, ENT=14, SAI=15, IF=16, ELSE=17, 
		ELIF=18, RET=19, END=20, ID=21, NUM=22, AP=23, FP=24, EB=25, ErrorChar=26;
	public static final int
		RULE_inicio = 0, RULE_declaracoes = 1, RULE_argumento = 2, RULE_algoritmo = 3, 
		RULE_instr = 4, RULE_atrib = 5, RULE_acao = 6, RULE_operacao = 7, RULE_operando = 8, 
		RULE_operacao_cauda = 9, RULE_se = 10, RULE_condicao = 11, RULE_logica = 12, 
		RULE_senao = 13, RULE_senao_se = 14, RULE_enquanto = 15, RULE_para = 16, 
		RULE_funcao_vazio = 17, RULE_funcao_nao_vazio = 18, RULE_retorna = 19, 
		RULE_chamada_funcao = 20, RULE_tipo = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "declaracoes", "argumento", "algoritmo", "instr", "atrib", 
			"acao", "operacao", "operando", "operacao_cauda", "se", "condicao", "logica", 
			"senao", "senao_se", "enquanto", "para", "funcao_vazio", "funcao_nao_vazio", 
			"retorna", "chamada_funcao", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'I'", "'C'", "'B'", "'S'", "'F'", "':'", null, "'PARA'", "'ATE'", 
			"'ENQUANTO'", null, null, "'VAZIO'", "'ENTRADA'", "'SAIDA'", "'?'", "'%'", 
			"'%?'", "'RETORNA'", "'END'", null, null, "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "ATR", "OP_ART", "PARA", "ATE", "ENQ", 
			"OP_REL", "OP_LOG", "VAZ", "ENT", "SAI", "IF", "ELSE", "ELIF", "RET", 
			"END", "ID", "NUM", "AP", "FP", "EB", "ErrorChar"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Piton.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PitonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	 
		public InicioContext() { }
		public void copyFrom(InicioContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NInicioContext extends InicioContext {
		public AlgoritmoContext algoritmo() {
			return getRuleContext(AlgoritmoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PitonParser.EOF, 0); }
		public NInicioContext(InicioContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterNInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitNInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			_localctx = new NInicioContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			algoritmo();
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracoesContext extends ParserRuleContext {
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
	 
		public DeclaracoesContext() { }
		public void copyFrom(DeclaracoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NDeclaracao2Context extends DeclaracoesContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PitonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PitonParser.ID, i);
		}
		public TerminalNode ATR() { return getToken(PitonParser.ATR, 0); }
		public TerminalNode NUM() { return getToken(PitonParser.NUM, 0); }
		public TerminalNode AP() { return getToken(PitonParser.AP, 0); }
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public TerminalNode FP() { return getToken(PitonParser.FP, 0); }
		public NDeclaracao2Context(DeclaracoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterNDeclaracao2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitNDeclaracao2(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NDeclaracao1Context extends DeclaracoesContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(PitonParser.ID, 0); }
		public NDeclaracao1Context(DeclaracoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterNDeclaracao1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitNDeclaracao1(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new NDeclaracao1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				tipo();
				setState(48);
				match(ID);
				}
				break;
			case 2:
				_localctx = new NDeclaracao2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				tipo();
				setState(51);
				match(ID);
				setState(52);
				match(ATR);
				setState(59);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(53);
					match(ID);
					}
					break;
				case NUM:
					{
					setState(54);
					match(NUM);
					}
					break;
				case AP:
					{
					setState(55);
					match(AP);
					setState(56);
					operacao();
					setState(57);
					match(FP);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentoContext extends ParserRuleContext {
		public ArgumentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumento; }
	 
		public ArgumentoContext() { }
		public void copyFrom(ArgumentoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NArgumento3Context extends ArgumentoContext {
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public NArgumento3Context(ArgumentoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterNArgumento3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitNArgumento3(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NArgumento2Context extends ArgumentoContext {
		public TerminalNode NUM() { return getToken(PitonParser.NUM, 0); }
		public NArgumento2Context(ArgumentoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterNArgumento2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitNArgumento2(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NArgumento1Context extends ArgumentoContext {
		public TerminalNode ID() { return getToken(PitonParser.ID, 0); }
		public NArgumento1Context(ArgumentoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterNArgumento1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitNArgumento1(this);
		}
	}

	public final ArgumentoContext argumento() throws RecognitionException {
		ArgumentoContext _localctx = new ArgumentoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argumento);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new NArgumento1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				match(ID);
				}
				break;
			case 2:
				_localctx = new NArgumento2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				match(NUM);
				}
				break;
			case 3:
				_localctx = new NArgumento3Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				operacao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlgoritmoContext extends ParserRuleContext {
		public AlgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algoritmo; }
	 
		public AlgoritmoContext() { }
		public void copyFrom(AlgoritmoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoAlgoritmoContext extends AlgoritmoContext {
		public List<InstrContext> instr() {
			return getRuleContexts(InstrContext.class);
		}
		public InstrContext instr(int i) {
			return getRuleContext(InstrContext.class,i);
		}
		public BlocoAlgoritmoContext(AlgoritmoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoAlgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoAlgoritmo(this);
		}
	}

	public final AlgoritmoContext algoritmo() throws RecognitionException {
		AlgoritmoContext _localctx = new AlgoritmoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_algoritmo);
		int _la;
		try {
			_localctx = new BlocoAlgoritmoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				instr();
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 6939966L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrContext extends ParserRuleContext {
		public InstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instr; }
	 
		public InstrContext() { }
		public void copyFrom(InstrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao2Context extends InstrContext {
		public AcaoContext acao() {
			return getRuleContext(AcaoContext.class,0);
		}
		public BlocoInstrucao2Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao2(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao1Context extends InstrContext {
		public AtribContext atrib() {
			return getRuleContext(AtribContext.class,0);
		}
		public BlocoInstrucao1Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao1(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao4Context extends InstrContext {
		public EnquantoContext enquanto() {
			return getRuleContext(EnquantoContext.class,0);
		}
		public BlocoInstrucao4Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao4(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao3Context extends InstrContext {
		public SeContext se() {
			return getRuleContext(SeContext.class,0);
		}
		public BlocoInstrucao3Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao3(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao6Context extends InstrContext {
		public Funcao_vazioContext funcao_vazio() {
			return getRuleContext(Funcao_vazioContext.class,0);
		}
		public BlocoInstrucao6Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao6(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao5Context extends InstrContext {
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public BlocoInstrucao5Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao5(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao8Context extends InstrContext {
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public BlocoInstrucao8Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao8(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao8(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao7Context extends InstrContext {
		public Funcao_nao_vazioContext funcao_nao_vazio() {
			return getRuleContext(Funcao_nao_vazioContext.class,0);
		}
		public BlocoInstrucao7Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao7(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao7(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoInstrucao9Context extends InstrContext {
		public RetornaContext retorna() {
			return getRuleContext(RetornaContext.class,0);
		}
		public BlocoInstrucao9Context(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoInstrucao9(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoInstrucao9(this);
		}
	}

	public final InstrContext instr() throws RecognitionException {
		InstrContext _localctx = new InstrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_instr);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new BlocoInstrucao1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				atrib();
				}
				break;
			case 2:
				_localctx = new BlocoInstrucao2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				acao();
				}
				break;
			case 3:
				_localctx = new BlocoInstrucao3Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				se();
				}
				break;
			case 4:
				_localctx = new BlocoInstrucao4Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				enquanto();
				}
				break;
			case 5:
				_localctx = new BlocoInstrucao5Context(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(77);
				para();
				}
				break;
			case 6:
				_localctx = new BlocoInstrucao6Context(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(78);
				funcao_vazio();
				}
				break;
			case 7:
				_localctx = new BlocoInstrucao7Context(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(79);
				funcao_nao_vazio();
				}
				break;
			case 8:
				_localctx = new BlocoInstrucao8Context(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(80);
				declaracoes();
				}
				break;
			case 9:
				_localctx = new BlocoInstrucao9Context(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(81);
				retorna();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribContext extends ParserRuleContext {
		public AtribContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atrib; }
	 
		public AtribContext() { }
		public void copyFrom(AtribContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NAtribuicaoContext extends AtribContext {
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public TerminalNode ATR() { return getToken(PitonParser.ATR, 0); }
		public TerminalNode ID() { return getToken(PitonParser.ID, 0); }
		public NAtribuicaoContext(AtribContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterNAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitNAtribuicao(this);
		}
	}

	public final AtribContext atrib() throws RecognitionException {
		AtribContext _localctx = new AtribContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atrib);
		try {
			_localctx = new NAtribuicaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			operacao();
			setState(85);
			match(ATR);
			setState(86);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AcaoContext extends ParserRuleContext {
		public AcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acao; }
	 
		public AcaoContext() { }
		public void copyFrom(AcaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoAcao2Context extends AcaoContext {
		public TerminalNode ENT() { return getToken(PitonParser.ENT, 0); }
		public TerminalNode ID() { return getToken(PitonParser.ID, 0); }
		public BlocoAcao2Context(AcaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoAcao2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoAcao2(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlocoAcao1Context extends AcaoContext {
		public TerminalNode SAI() { return getToken(PitonParser.SAI, 0); }
		public TerminalNode ID() { return getToken(PitonParser.ID, 0); }
		public TerminalNode NUM() { return getToken(PitonParser.NUM, 0); }
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public BlocoAcao1Context(AcaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterBlocoAcao1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitBlocoAcao1(this);
		}
	}

	public final AcaoContext acao() throws RecognitionException {
		AcaoContext _localctx = new AcaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_acao);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SAI:
				_localctx = new BlocoAcao1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(SAI);
				setState(92);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(89);
					match(ID);
					}
					break;
				case 2:
					{
					setState(90);
					match(NUM);
					}
					break;
				case 3:
					{
					setState(91);
					operacao();
					}
					break;
				}
				}
				break;
			case ENT:
				_localctx = new BlocoAcao2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(ENT);
				setState(95);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperacaoContext extends ParserRuleContext {
		public OperacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao; }
	 
		public OperacaoContext() { }
		public void copyFrom(OperacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NOperacaoContext extends OperacaoContext {
		public OperandoContext operando() {
			return getRuleContext(OperandoContext.class,0);
		}
		public Operacao_caudaContext operacao_cauda() {
			return getRuleContext(Operacao_caudaContext.class,0);
		}
		public NOperacaoContext(OperacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).enterNOperacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PitonListener ) ((PitonListener)listener).exitNOperacao(this);
		}
	}

	public final OperacaoContext operacao() throws RecognitionException {
		OperacaoContext _localctx = new OperacaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operacao);
		int _la;
		try {
			_localctx = new NOperacaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			operando();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_ART) {
				{
				setState(99);
				operacao_cauda();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
